# AdventOfCode-2021

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: main.rs
day-one/src/: lib.rs
day-one/tests/: lib.rs
day_01/: Cargo.toml
day_01/src/: lib.rs
day_01/tests/: lib.rs
day_02/: Cargo.toml
day_02/src/: lib.rs
day_02/tests/: lib.rs
day_03/: Cargo.toml
day_03/src/: lib.rs
day_03/tests/: lib.rs
day_04/: Cargo.toml
day_04/src/: bingo_board.rs  bingo_game.rs  lib.rs
day_04/tests/: lib.rs
day_05/: Cargo.toml
day_05/src/: hydrothermal_vent.rs  invalid_input_string_length.rs  lib.rs  ocean_floor.rs  point.rs
day_05/tests/: lib.rs
day_06/: Cargo.toml
day_06/src/: lanternfish_school.rs  lib.rs
day_06/tests/: lib.rs
day_07/: Cargo.toml
day_07/src/: lib.rs
day_07/tests/: lib.rs
day_08/: Cargo.toml
day_08/src/: entry.rs  lib.rs  seven_segment_display.rs
day_08/tests/: lib.rs
day_one/src/: lib.rs
day_one/tests/: lib.rs
day_three/: Cargo.toml
day_three/src/: lib.rs
day_three/tests/: lib.rs
day_two/: Cargo.toml
day_two/src/: command.rs  submarine.rs
day_two/tests/: lib.rs
src/: lib.rs
tests/: test.rs
utils/src/: binary.rs  lib.rs
utils/tests/: binary.rs  io.rs  lib.rs
