[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
day_01 = { path = "../day_01" }
day_02 = { path = "../day_02" }
day_03 = { path = "../day_03" }
day_04 = { path = "../day_04" }
day_05 = { path = "../day_05" }
day_06 = { path = "../day_06" }
day_07 = { path = "../day_07" }
